objects/LBI__CampaignRollup__c.object
<CustomObject>
    <fields>
        <fullName>LBI__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__Description__c</fullName>
        <inlineHelpText>Long Description for this Campaign Rollup</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LBI__DisplayName__c</fullName>
        <inlineHelpText>Display Name for this Campaign Rollup</inlineHelpText>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeApplicationRegion__c</fullName>
        <label>Lattice Application/Region</label>
        <referenceTo>LBI__LatticeApplicationRegion__c</referenceTo>
        <relationshipLabel>Lattice Campaign Rollups</relationshipLabel>
        <relationshipName>CampaignRollups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Lattice Campaign Rollup</label>
    <nameField>
        <displayFormat>CR-{0000000000}</displayFormat>
        <label>Campaign Rollup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Campaign Rollups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>